# private-gpt

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  app.py  main.py  pyproject.toml
